# lynne-social

./: .coverage  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build-deps.sh  build.sh  config.yaml  opencode.json  pyproject.toml
.opencode/agents/: lynne-builder.md
.opencode/commands/: lint.md  test.md
.opencode/plans/: doc-migration-plan.md
.opencode/skills/lynne-browser-lessons/: SKILL.md
.opencode/skills/lynne-code-conventions/: SKILL.md
.opencode/skills/lynne-cpp-migration/: SKILL.md
doc/design/: CPP_MIGRATION.md  DESIGN.md  REQUIREMENTS.md  TEST.md
doc/design/core/adapters/: ADAPTER.md
doc/design/core/browser/: BROWSER_MANAGER.md
doc/design/wheel/browser/: BROWSER_MANAGER.md
doc/tech/: cdp.md  pytest-guide.md
doc/tests/common/: 测试方案.md  测试结果.md
doc/tests/core/adapters/: 测试方案.md  测试结果.md
doc/tests/core/browser/: 测试方案.md  测试结果.md
doc/tests/wheel/browser/: 测试方案.md  测试结果.md
doc/tests/wheel/config/: 测试方案.md  测试结果.md
doc/tests/wheel/llm/: 测试方案.md  测试结果.md
doc/tests/wheel/logger/: 测试方案.md  测试结果.md
doc/tests/wheel/scheduler/: 测试方案.md  测试结果.md
doc/tests/wheel/storage/: 测试方案.md  测试结果.md
doc/tests/wheel/ws_client/: 测试方案.md  测试结果.md
lynne-cpp/: .gitignore  build-deps.sh
lynne-cpp/src/: CMakeLists.txt
lynne-cpp/src/common/: models.cpp  models.h  module.h
lynne-cpp/src/wheel/config/: CMakeLists.txt  config_models.cpp  config_models.h
lynne-cpp/src/wheel/config/imp/: json_config_loader.cpp  json_config_loader.h
lynne-cpp/src/wheel/llm/: llm_engine.h  llm_factory.cpp  llm_factory.h  llm_models.cpp  llm_models.h
lynne-cpp/src/wheel/llm/imp/: deepseek_engine.cpp  deepseek_engine.h
lynne-cpp/src/wheel/logger/: CMakeLists.txt  logger.h  logger_factory.cpp  logger_macros.h  logger_models.cpp  logger_models.h
lynne-cpp/src/wheel/logger/imp/: spdlog_logger.cpp
lynne-cpp/src/wheel/scheduler/: CMakeLists.txt  scheduler.h  scheduler_factory.cpp  scheduler_factory.h  scheduler_models.cpp
lynne-cpp/src/wheel/scheduler/imp/: uv_scheduler.cpp  uv_scheduler.h
lynne-cpp/src/wheel/storage/: storage.h  storage_factory.cpp  storage_factory.h  storage_models.h
lynne-cpp/src/wheel/storage/imp/: jsonl_storage.h
lynne-cpp/src/wheel/ws_client/: CMakeLists.txt  ws_client.h  ws_client_factory.cpp  ws_client_factory.h  ws_client_models.cpp  ws_client_models.h
lynne-cpp/tests/: CMakeLists.txt
lynne-cpp/tests/common/: CMakeLists.txt  test_models_ut.cpp
lynne-cpp/tests/wheel/config/: test_config_loader_ta.cpp  test_config_models_ut.cpp
lynne-cpp/tests/wheel/llm/: test_llm_ta.cpp  test_llm_ut.cpp
lynne-cpp/tests/wheel/logger/: CMakeLists.txt  test_logger_ta.cpp  test_logger_ut.cpp
lynne-cpp/tests/wheel/scheduler/: test_scheduler_ta.cpp  test_scheduler_ut.cpp
lynne-cpp/tests/wheel/storage/: CMakeLists.txt
lynne-cpp/tests/wheel/ws_client/: CMakeLists.txt  test_ws_client_ta.cpp  ws_echo_server.cpp
opencode_session/: 2026-05-05-async-refactor.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  __init__.py  factory.py  models.py  module.py
src/core/adapters/: __init__.py  adapter_factory.py  adapter_models.py  base_adapter.py
src/core/adapters/imp/: __init__.py  llm_adapter.py  rednote_adapter.py
src/core/agent/: __init__.py  agent.py  agent_factory.py  agent_models.py  tools.py
src/core/browser/: __init__.py
src/core/browser/imp/: playwright_browser_manager.py  playwright_context.py
src/wheel/browser/: CMakeLists.txt  browser_factory.cpp  browser_factory.h  browser_factory.py  browser_helpers.cpp  browser_helpers.h  browser_manager.h  browser_manager.py  browser_models.cpp  browser_models.h  browser_models.py
src/wheel/browser/imp/: cdp_browser_manager.cpp  cdp_browser_manager.h
src/wheel/config/: __init__.py  config_factory.cpp  config_factory.h  config_factory.py  config_loader.h  config_loader.py  config_models.py
src/wheel/config/imp/: json_config_loader.cpp  yaml_config_loader.py
src/wheel/llm/: CMakeLists.txt  __init__.py  llm_engine.py  llm_factory.py  llm_models.py
src/wheel/llm/imp/: deepseek_engine.cpp  deepseek_engine.py
src/wheel/logger/: __init__.py  logger.py  logger_factory.h  logger_models.cpp  logger_models.py
src/wheel/logger/imp/: spdlog_logger.h
src/wheel/scheduler/: scheduler.h  scheduler.py  scheduler_factory.h  scheduler_factory.py  scheduler_models.h  scheduler_models.py
src/wheel/scheduler/imp/: simple_scheduler.py  uv_scheduler.cpp  uv_scheduler.h
src/wheel/storage/: CMakeLists.txt  __init__.py  storage.py  storage_factory.py  storage_models.cpp  storage_models.py
src/wheel/storage/imp/: jsonl_storage.cpp  jsonl_storage.py
src/wheel/ws_client/imp/: ix_ws_client.cpp  ix_ws_client.h
tests/: CMakeLists.txt  conftest.py
tests/common/: test_common_models.py  test_models_ta.cpp
tests/core/adapters/: test_adapter_factory.py  test_adapter_models.py  test_rednote_impl.py  test_rednote_real.py
tests/core/browser/: test_browser_factory.py  test_browser_impl.py  test_browser_models.py
tests/wheel/browser/: CMakeLists.txt  test_browser_baidu_ta.cpp  test_browser_factory.py  test_browser_human_ta.cpp  test_browser_human_ta_edge.cpp  test_browser_impl.py  test_browser_models.py  test_browser_models_ut.cpp  test_browser_ta.cpp  test_browser_xiaohongshu_ta.cpp  test_cdp_diagnostics.py
tests/wheel/config/: CMakeLists.txt  test_config_factory.py  test_config_impl.py  test_config_models.py  test_config_models_ut.cpp
tests/wheel/llm/: CMakeLists.txt  test_llm_factory.py  test_llm_impl.py  test_llm_models.py
tests/wheel/scheduler/: CMakeLists.txt  test_scheduler_factory.py  test_scheduler_impl.py  test_scheduler_models.py  test_scheduler_ut.cpp
tests/wheel/storage/: test_storage_factory.py  test_storage_impl.py  test_storage_ta.cpp  test_storage_ut.cpp
tests/wheel/ws_client/: test_ws_client_ut.cpp  ws_echo_server.h
